@@ -2,6 +2,14 @@
 
         Qt build fix: Updated for ArgList changes.
 
+        * bridge/qt/qt_runtime.cpp:
+        (JSC::Bindings::QtRuntimeMetaMethod::call):
+        (JSC::Bindings::QtRuntimeConnectionMethod::call):
+
+2010-05-29  Geoffrey Garen  <ggaren@apple.com>
+
+        Qt build fix: Updated for ArgList changes.
+
         * bridge/qt/qt_pixmapruntime.cpp:
         (JSC::Bindings::QtPixmapInstance::invokeMethod):
         * bridge/qt/qt_runtime.cpp:
